@@ -1,3 +1,8 @@
+Thu Feb  7 10:12:25 CET 2002  Pekka Riikonen <priikone@silcnet.org>
+
+	* Fixed CUMODE_CHANGE notify handling to change the mode of
+	  correct client.  Affected file lib/silcclient/client_notify.c.
+
 Sun Feb  3 17:20:52 EET 2002  Pekka Riikonen <priikone@silcnet.org>
 
 	* Fixed the file transfer's key agreement payload to include
